objects/Chatter_Story__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seconds_Apart_For_Posting__c</fullName>
        <defaultValue>5</defaultValue>
        <description>seconds before 1st comment post after your post, 2nd post, 3rd post, etc...</description>
        <inlineHelpText>Works better if it&apos;s more than 10 seconds apart. Schedule job isn&apos;t very punctual...</inlineHelpText>
        <label>Seconds Apart For Posting</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Watch_Word__c</fullName>
        <description>the word to watch out for!</description>
        <label>Watch Word</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Chatter Story</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>